--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -1,4 +1,4 @@
-.modal-overlay {
+.react-modal-component-hw {
     position: absolute;
     z-index: 999;
     height: 100%;
@@ -8,12 +8,11 @@
     background-color: rgba(0, 0, 0, 0.42);
 }
 
-.modal-container {
+.react-modal-component-hw-container {
     width: 400px;
     margin-right: auto;
     margin-left: auto;
     background-color: #ffffff;
-    border-radius: 0.8rem;
     position: relative;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     display: flex;
@@ -21,32 +20,38 @@
     padding: 1.5rem;
 }
 
-.modal-icon {
+.react-modal-component-hw-icon {
     position: absolute;
     top: 12px;
     right: 15px;
     cursor: pointer;
+    opacity: 0.5;
+    transition: opacity 0.4s ease;
 }
 
-.modal-header {
+.react-modal-component-hw-icon:hover {
+    opacity: 1;
+}
+
+.react-modal-component-hw-header {
     display: flex;
     flex-direction: column;
     padding-bottom: 1rem;
 }
 
-.modal-title {
+.react-modal-component-hw-title {
     font-size: 1rem;
     font-weight: bold;
     color: #393939;
     margin-bottom: 0.5rem;
 }
 
-.modal-description {
+.react-modal-component-hw-description {
     font-size: 0.775rem;
     color: #71717a;
 }
 
-.modal-footer {
+.react-modal-component-hw-footer {
     display: flex;
     justify-content: flex-end;
     align-items: center;
