--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -28,7 +28,7 @@ body,
     background-color: #f2f2f2;
     color: #536cb4;
     font-size: 24px;
-    box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 4px;
+    box-shadow: rgba(0, 0, 0, 0.2) 2px 4px 6px;
     transition: background-color 0.4s ease;
 }
 
@@ -36,4 +36,62 @@ body,
     background-color: transparent;
     cursor: pointer;
     color: #f2f2f2;
+}
+
+.custom-modal {
+    background-color: rgba(135, 92, 0, 0.281);
+}
+
+.custom-modal-container {
+    background-color: #2c2c2c;
+    border-radius: 0.8rem;
+    width: 600px;
+}
+
+.custom-modal-header {
+    padding-bottom: 1rem;
+    display: flex;
+    align-items: center;
+}
+
+.custom-modal-title {
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: #ececec;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
+.custom-modal-description {
+    font-size: 0.995rem;
+    color: #cacaca;
+}
+
+.custom-modal-footer {
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid #cacaca;
+    padding-top: 1rem;
+}
+
+.custom-modal-button {
+    padding: 0.7rem 1.5rem;
+    border-radius: 2rem;
+    border: 3px solid #3a4c7e;
+    background-color: #e2e2e2;
+    color: #2c2c2c;
+    font-size: 1.1rem;
+    box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 4px;
+    transition: background-color 0.4s ease;
+}
+
+.custom-modal-button:hover {
+    background-color: transparent;
+    cursor: pointer;
+    color: #f2f2f2;
+}
+
+.custom-modal-img {
+    width: 200px;
+    height: 100%;
 }
